--- a/pom.xml
+++ b/pom.xml
@@ -74,11 +74,16 @@
    <artifactId>aspectjrt</artifactId>
    <version>1.7.4</version>
   </dependency>
-  <dependency>
-   <groupId>mysql</groupId>
-   <artifactId>mysql-connector-java</artifactId>
-   <version>5.1.6</version>
-  </dependency>
+<!--   <dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-core</artifactId>
+    <version>3.6.0.Final</version>
+</dependency> -->
+<dependency>
+    <groupId>com.microsoft.sqlserver</groupId>
+    <artifactId>sqljdbc4</artifactId>
+    <version>4.0</version>
+</dependency>
   <dependency>
     <groupId>javax.xml.bind</groupId>
     <artifactId>jaxb-api</artifactId>
