--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
         <param-value>/WEB-INF/hostgroup-servlet.xml</param-value>
     </context-param> -->
 	<servlet>
-        <servlet-name>hostgroup</servlet-name>
+        <servlet-name>user</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
 	 		<param-name>com.sun.jersey.spi.container.ContainerResponseFilters</param-name>
@@ -21,7 +21,7 @@
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>hostgroup</servlet-name>
+        <servlet-name>user</servlet-name>
         <url-pattern>/rest/*</url-pattern>
     </servlet-mapping>
     <!-- <listener>
